# glpipci

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
dev/: runner.py
dev/tlsabara/: queries.py  runner.py
glpipci/commons/: webs.py
glpipci/comunicator/: __init__.py
glpipci/comunicator/v10_0/: api.py  patterns.py
glpipci/comunicator/v10_0/endpoints/tickets/: core.py  itil_folowups.py  itil_solutions.py
pyglpi/commons/: webs.py
pyglpi/comunicator/: __init__.py
pyglpi/comunicator/v10_0/: api.py  interface_errors.py
pyglpi/comunicator/v10_0/endpoints/tickets/: core.py  itil_folowups.py  itil_solutions.py
