[metadata]
name = glpipci
version = 0.1.0
author = Thiago Sabará
author_email = thi.sil.sab@gmail.com
description = Um cliente Python para a API do GLPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlsabara/glpipci
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    httpx
    python-dotenv